機能を追加しました

--- a/practice/Aindex.html
+++ b/practice/Aindex.html
@@ -24,7 +24,8 @@
                 宿題
             </li>
         </ul>
-        
+        <input type = "text" >
+        <button >送信</button>
     </div>
 </body>
 </html>
