プログラミングという項目を追加しました

--- a/practice/Aindex.html
+++ b/practice/Aindex.html
@@ -24,6 +24,11 @@
                 宿題
             </li>
         </ul>
+        <ul>
+            <li>
+                プログラミング
+            </li>
+        </ul>
         <input type = "text" >
         <button >送信</button>
     </div>
