--- a/practice/Aindex.html
+++ b/practice/Aindex.html
@@ -26,7 +26,7 @@
         </ul>
         <ul>
             <li>
-                プログラミング
+                プログラミング。
             </li>
         </ul>
         <input type = "text" >
