まとめのコミットです

--- a/practice/Aindex.html
+++ b/practice/Aindex.html
@@ -32,6 +32,7 @@
         <input type = "text" >
         <button >送信</button>
         押してね
+        <input type = "checkbox">
     </div>
 </body>
 </html>
