--- a/practice/Aindex.html
+++ b/practice/Aindex.html
@@ -29,6 +29,8 @@
                 プログラミング。
             </li>
         </ul>
+        <input type = "text">
+        <button>送信</button>        
     </div>
 </body>
 </html>
