ブランチテスト

--- a/practice/Aindex.html
+++ b/practice/Aindex.html
@@ -30,7 +30,7 @@
             </li>
         </ul>
         <input type = "text">
-        <button>送信</button>        
+        <button>送信test</button>        
     </div>
 </body>
 </html>
