--- a/practice/Aindex.html
+++ b/practice/Aindex.html
@@ -28,6 +28,7 @@
             <li>
                 プログラミング。
             </li>
+            <input type = "checkbox">
         </ul>
     </div>
 </body>
